apps/local/media/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  sessionAffinity: ClientIP
  type: ClusterIP
  ports:
  - port: 8096
    targetPort: 8096
    name: http
    protocol: TCP
